testsuite/poke.pkl/computed-diag-5.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int i;
    computed string blah; /* { dg-error "getter" } */
    int j;

    method set_blah = (string s) void: { }
  };
